2016-??-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035_01)
* Removed appveyor.yml and mysql.mtest from CPAN releases.
* Converted README.pod to README.md because of installation failures on
  FreeBSD, reported by Don Randolph.
  (https://rt.cpan.org/Public/Bug/Display.html?id=114177)

2016-07-09 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035)
*  Add DBI back to configure_requires, fix by miyagawa.

2016-07-06 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.034)
* Full version, to include all changes since 4.033.

2016-07-04 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.033_03)
* Check for errors after calling mysql_affected_rows(), by Pali.
   (https://rt.cpan.org/Public/Bug/Display.html?id=75353)
* Fix reference to MySQL manual, chapter Character Set Support, suggested
  by Slaven Rezić (https://rt.cpan.org/Public/Bug/Display.html?id=114148)
* Improve documentation on current database, suggested by Vladimir Marek.
   (https://rt.cpan.org/Ticket/Display.html?id=112587)

2015-12-18 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.033_02)
* Compile against libssl by default. This allows to connect against remote
  MySQL servers using SSL. Previously this was only achieved with an explicit
  switch provided to Makefile.PL - if for some reason you can't or don't want
  to link against libssl, you can use the new --nossl switch to Makefile.PL.
* Made tests more robust after CPAN Testers failures.

2015-12-15 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.033_01)
* Raise minimum DBI version to 1.609 (from 2009!) in order to make
  tests pass on RHEL5.
* Add explicit documentation for how to enable SSL at build time,
  provided by genio.
* Improve test suite to make it more robust using mixed versions of client and
  server.
* Fix use after free error in my_login, provided by hannob.
* Add explicit instructions stating brackets are required around ipv6-addresses
  in connection strings, provided by Kenny Gryp.